Fix dark mode on Firefox

--- a/source/settings-page/index.css
+++ b/source/settings-page/index.css
@@ -21,8 +21,8 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
-    html {
-        background-color: #35363a;
+    :root {
+        background-color: rgb(35, 34, 43);
     }
 }
 
